[gd_scene load_steps=41 format=3 uid="uid://d2rkqcto5qufq"]

[ext_resource type="Script" path="res://Scenes/Prototype.gd" id="1_lunbl"]
[ext_resource type="Texture2D" uid="uid://dwhc570dimtng" path="res://Assets/PTP Art_Leg.png" id="2_a5kuc"]
[ext_resource type="Texture2D" uid="uid://dfm24bu6vambe" path="res://Assets/PTP Art_Clipboard Button.png" id="2_r43uj"]
[ext_resource type="Texture2D" uid="uid://ckn01a63b0mfi" path="res://Assets/PTP Art_Torso.png" id="3_lra7s"]
[ext_resource type="Texture2D" uid="uid://k14eish3o430" path="res://Assets/PTP Art_Head.png" id="4_e28ua"]
[ext_resource type="Texture2D" uid="uid://dbqiw4k7a2klp" path="res://Assets/PTP Art_Sleep.png" id="5_2skny"]
[ext_resource type="Texture2D" uid="uid://csbp32mui1hv5" path="res://Assets/PTP Art_Water.png" id="6_p1cwt"]
[ext_resource type="Texture2D" uid="uid://cbalg4qh3y1vv" path="res://Assets/PTP Art_Clipboard.png" id="8_uuc0x"]
[ext_resource type="Script" path="res://Scenes/Progress Bar.gd" id="9_mw7h4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lvtky"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pioch"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3yqt0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g4ulv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bcgo0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fiwu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hnds5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uwg1s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4tr50"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tdnsn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hwdyg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xxtqa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64w48"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vr5sc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_upwuk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ved0b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rmb5e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3nprg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wyc86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pt5gd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aiipx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rrny0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8c3sa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ex7rq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_la6nf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nl0rg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aqe6o"]

[sub_resource type="LabelSettings" id="LabelSettings_cpm48"]
font_size = 55
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m2y2b"]
font_size = 55
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_agk4m"]
font_size = 55
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_03ni1"]
font_size = 45
font_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lunbl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -93.0
offset_top = -85.0
offset_right = 2578.0
offset_bottom = 1502.0
color = Color(0.326442, 0.142584, 0.052938, 1)
metadata/_edit_lock_ = true

[node name="Med Buttons" type="Node2D" parent="."]

[node name="Legs" type="Sprite2D" parent="Med Buttons"]
position = Vector2(205, 531)
scale = Vector2(0.859456, 0.859456)
texture = ExtResource("2_a5kuc")

[node name="Label" type="Label" parent="Med Buttons/Legs"]
offset_left = -127.795
offset_top = 36.8639
offset_right = 418.205
offset_bottom = 154.864
theme_override_font_sizes/font_size = 51
text = "Leg Medicine"

[node name="Leg Meds" type="Button" parent="Med Buttons"]
offset_left = 86.0
offset_top = 350.0
offset_right = 384.0
offset_bottom = 768.0
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxEmpty_lvtky")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pioch")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3yqt0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_g4ulv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bcgo0")

[node name="Torso" type="Sprite2D" parent="Med Buttons"]
position = Vector2(674, 559)
scale = Vector2(0.859, 0.859)
texture = ExtResource("3_lra7s")

[node name="Label" type="Label" parent="Med Buttons/Torso"]
offset_left = -131.368
offset_top = 10.1053
offset_right = 390.632
offset_bottom = 107.105
theme_override_font_sizes/font_size = 46
text = "Torso Medicine"

[node name="Torso Meds" type="Button" parent="Med Buttons"]
offset_left = 556.0
offset_top = 354.0
offset_right = 851.0
offset_bottom = 764.0
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fiwu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hnds5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uwg1s")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4tr50")
theme_override_styles/focus = SubResource("StyleBoxEmpty_tdnsn")

[node name="Head" type="Sprite2D" parent="Med Buttons"]
position = Vector2(1173, 560)
scale = Vector2(0.859, 0.859)
texture = ExtResource("4_e28ua")

[node name="Label" type="Label" parent="Med Buttons/Head"]
offset_left = -163.653
offset_top = 14.0274
offset_right = 273.347
offset_bottom = 98.0274
theme_override_font_sizes/font_size = 46
text = "Head Medicine"

[node name="Head Meds" type="Button" parent="Med Buttons"]
offset_left = 1029.0
offset_top = 359.0
offset_right = 1315.0
offset_bottom = 758.0
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxEmpty_hwdyg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xxtqa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_64w48")

[node name="Sleep and Water Buttons" type="Node2D" parent="."]

[node name="Sleep Sprite" type="Sprite2D" parent="Sleep and Water Buttons"]
position = Vector2(1185, 146)
scale = Vector2(0.297382, 0.327962)
texture = ExtResource("5_2skny")
metadata/_edit_lock_ = true

[node name="Sleep" type="Button" parent="Sleep and Water Buttons"]
offset_left = 1095.0
offset_top = 30.0
offset_right = 1291.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxEmpty_vr5sc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_upwuk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ved0b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rmb5e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3nprg")

[node name="Water Sprite" type="Sprite2D" parent="Sleep and Water Buttons"]
position = Vector2(1191, 285)
scale = Vector2(0.272461, 0.272461)
texture = ExtResource("6_p1cwt")
metadata/_edit_lock_ = true

[node name="Water" type="Button" parent="Sleep and Water Buttons"]
offset_left = 1114.0
offset_top = 211.0
offset_right = 1255.0
offset_bottom = 349.0
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxEmpty_wyc86")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pt5gd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_aiipx")
expand_icon = true

[node name="Parasite Timers" type="Node2D" parent="."]

[node name="Legs Timer" type="Timer" parent="Parasite Timers"]
wait_time = 0.5
autostart = true

[node name="Torso Timer" type="Timer" parent="Parasite Timers"]
wait_time = 0.5
autostart = true

[node name="Head Timer" type="Timer" parent="Parasite Timers"]
wait_time = 0.5
autostart = true

[node name="Clipboard Button" type="Button" parent="."]
offset_left = 87.0
offset_top = 35.0
offset_right = 278.0
offset_bottom = 229.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_rrny0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8c3sa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ex7rq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_la6nf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nl0rg")
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="Clipboard Button"]
position = Vector2(89, 101)
scale = Vector2(0.276693, 0.276693)
texture = ExtResource("2_r43uj")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 368.0
offset_top = 59.0
offset_right = 968.0
offset_bottom = 159.0
theme_override_styles/background = SubResource("StyleBoxTexture_aqe6o")
value = 100.0
rounded = true
show_percentage = false
script = ExtResource("9_mw7h4")

[node name="Damage Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Clipboard" type="Node2D" parent="."]
visible = false
position = Vector2(-124, -6)

[node name="Sprite2D" type="Sprite2D" parent="Clipboard"]
position = Vector2(818, 383)
scale = Vector2(0.948365, 0.950521)
texture = ExtResource("8_uuc0x")

[node name="Parasite Count" type="Node2D" parent="Clipboard"]
position = Vector2(-775, 79)

[node name="Legs" type="Label" parent="Clipboard/Parasite Count"]
offset_left = 1420.0
offset_top = 450.0
offset_right = 1616.0
offset_bottom = 575.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Legs: "
label_settings = SubResource("LabelSettings_cpm48")

[node name="Torso" type="Label" parent="Clipboard/Parasite Count"]
offset_left = 1418.0
offset_top = 350.0
offset_right = 1680.0
offset_bottom = 466.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Torso: "
label_settings = SubResource("LabelSettings_m2y2b")

[node name="Head" type="Label" parent="Clipboard/Parasite Count"]
offset_left = 1416.0
offset_top = 258.0
offset_right = 1704.0
offset_bottom = 396.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Head: "
label_settings = SubResource("LabelSettings_agk4m")

[node name="Med Level" type="Label" parent="Clipboard"]
offset_left = 642.0
offset_top = 263.0
offset_right = 1027.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Med Level: "
label_settings = SubResource("LabelSettings_03ni1")

[connection signal="mouse_entered" from="Med Buttons/Leg Meds" to="." method="_on_leg_meds_mouse_entered"]
[connection signal="mouse_exited" from="Med Buttons/Leg Meds" to="." method="_on_leg_meds_mouse_exited"]
[connection signal="pressed" from="Med Buttons/Leg Meds" to="." method="_on_leg_meds_pressed"]
[connection signal="mouse_entered" from="Med Buttons/Torso Meds" to="." method="_on_torso_meds_mouse_entered"]
[connection signal="mouse_exited" from="Med Buttons/Torso Meds" to="." method="_on_torso_meds_mouse_exited"]
[connection signal="pressed" from="Med Buttons/Torso Meds" to="." method="_on_torso_meds_pressed"]
[connection signal="mouse_entered" from="Med Buttons/Head Meds" to="." method="_on_head_meds_mouse_entered"]
[connection signal="mouse_exited" from="Med Buttons/Head Meds" to="." method="_on_head_meds_mouse_exited"]
[connection signal="pressed" from="Med Buttons/Head Meds" to="." method="_on_head_meds_pressed"]
[connection signal="pressed" from="Sleep and Water Buttons/Sleep" to="." method="_on_sleep_pressed"]
[connection signal="pressed" from="Sleep and Water Buttons/Water" to="." method="_on_water_pressed"]
[connection signal="timeout" from="Parasite Timers/Legs Timer" to="." method="_on_legs_timer_timeout"]
[connection signal="timeout" from="Parasite Timers/Torso Timer" to="." method="_on_torso_timer_timeout"]
[connection signal="timeout" from="Parasite Timers/Head Timer" to="." method="_on_head_timer_timeout"]
[connection signal="pressed" from="Clipboard Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Damage Timer" to="ProgressBar" method="_on_damage_timer_timeout"]
